[package]
name = "wasm_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
log = "0.4.0"
env_logger = "0.9"
chrono = "0.4"
tonic = "0.3"
prost = "0.6"
[build-dependencies]
tonic-build = "0.3"
