[package]
name = "wasm_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
log = "0.4.0"
env_logger = "0.9"
chrono = "0.4"
tonic = "0.8.2"
prost = "0.11"
rocksdb = "0.19"
futures = "0.3.25"
lazy_static = "1.4.0"
wasmedge-sys = "0.9"
wasmedge-sdk = "0.4.0"
wasmedge-types = "0.2.1"
[build-dependencies]
tonic-build = { version = "0.8.2", features = ["prost"] }
