[package]
name = "wasm_storage_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httpcodec = "0.2.3"
bytecodec = "0.4.15"
wasmedge_http_req = "0.8.1"
wasmedge_wasi_socket = { git = "https://github.com/second-state/wasmedge_wasi_socket.git" }
httparse = "1.5"
